fixed bug with not showing tasks after refresh

--- a/TaskManagment/wwwroot/css/site.css
+++ b/TaskManagment/wwwroot/css/site.css
@@ -192,7 +192,7 @@ footer .nav-wrapper {
     font-size: 13px;
     font-weight: 500;
     line-height: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .form-layout-form-submit-button {
